--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "knex": "^0.14.4"
+    "knex": "^0.14.4",
+    "pg": "^7.4.1"
   }
 }
