--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
 - postgresql
 before_script:
 - psql -c 'CREATE DATABASE byob_test;' -U postgres
+notifications:
+- email: false
 deploy:
   provider: heroku
   app: employment-data-be
